# eimis-synapse-tools

./: .dockerignore  .flake8  Dockerfile  README.md  example.csv  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-build.yml  lint.yml  publish.yml  test.yml
src/: cmd_discovery_room.py  cmd_import_users.py  cmd_simple_commands.py  csv_extract.py  main.py  rules.py  runner.py  synapse_client.py  test_rules.py
src/eimis_synapse_tools/: cmd_discovery_room.py  cmd_import_users.py  cmd_simple_commands.py  csv_extract.py  main.py  rules.py  synapse_client.py
tests/: test_csv_extract.py  test_rules.py
