[tool.poetry]
name = "eimis-synapse-tools"
version = "0.1.0"
description = "EIMIS tools for Synapse homeserver"
authors = ["Adrien Touzouli <contact@ad2ien.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
click = "^8.1.6"
matrix-client = "^0.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[tool.semantic_release]
version_variable = [
    "src/eimis_synapse_tools/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eimis-synapse-tools = "eimis_synapse_tools.main:cli"
